Release history for CPAN-Changes-Dependencies-Details

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001004, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +2 (recommends: +1, suggests: ↑2)
 - test: +1 (recommends: ↑2)

0.001004 2014-10-11T08:49:42Z 1c27f83
 [Bugfix]
 - Be slightly less dumb how generated releases get added to the log.
 - This is a forwards compatibility fix also ;)

 [Dependencies::Stats]
 - Dependencies changed since 0.001003, see misc/*.deps* for details
 - develop: +2 ↑1 (suggests: ↑1)
 - test: (recommends: ↑1)

0.001003 2014-08-30T01:14:34Z
 [00 Trivial]
 - no code changes.
 - Fixup author metadata

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)

 [Tests]
 - Slight coverage improvement

0.001002 2014-08-15T21:12:19Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace adjustment.

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

0.001001 2014-08-06T19:21:21Z
 [00 Trivial]
 - Update ReportPrereqs test
 - no code changes

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: -3

0.001000 2014-08-01T11:36:44Z
 - First version.