@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.016006 at Fri Aug  1 21:20:26 2014
+; vim: syntax=dosini
 name             = CPAN-Changes-Dependencies-Details
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -14,9 +15,8 @@ mantissa          = 6
 toolkit           = eumm
 toolkit_hardness  = soft
 bumpversions      = 1
-copyfiles         = LICENSE
 srcreadme         = mkdn
-twitter_hash_tags = #perl #cpan
+;twitter_extra_hash_tags = #
 ; auto_prereqs_skip = File::Find
 
 [Prereqs]
