@@ -1,12 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001005
+ [Added / runtime recommends]
+ - Moo 1.000008
+
  [Changed / configure recommends]
- - ExtUtils::MakeMaker 6.98 → 7.04_01
+ - ExtUtils::MakeMaker 6.98 → 7.00
 
  [Changed / test recommends]
- - ExtUtils::MakeMaker 6.98 → 7.04_01
- - Test::More 1.001006 → 1.001014
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 0.001004 2014-10-11T08:49:42Z
  [Changed / test recommends]
