@@ -4,8 +4,9 @@ Release history for CPAN-Changes-Dependencies-Details
  [Dependencies::Stats]
  - Dependencies changed since 0.001004, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
- - develop: +2 (recommends: +1, suggests: ↑2)
- - test: +1 (recommends: ↑2)
+ - develop: +9 ↑2 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 (recommends: ↑1 ↓1)
 
 0.001004 2014-10-11T08:49:42Z 1c27f83
  [Bugfix]
